smaller fullsize images orangevanilla changed to vanilla

--- a/hygiene.html
+++ b/hygiene.html
@@ -52,12 +52,24 @@ tag: white
             </div>
 </section>
 <article class="grey padding">
-<h2>Naturlig deodorant</h2>
-                <hr class="primary" />
-                       <p><a href="/no22-sheabodybutter">No 22 Calming Shea Body Butter</a>
-                                        <br><a href="/no23-citrusbodybutter">No 23 Citrus Body Butter</a>
-                                        <br><a href="/no24-cocoabodybutter">No 24 Cocoa Body Butter</a>
-                                        <br><a href="/no47-pawsandclawsraw">No 47 Paws and Claws Raw</a>
-                                        <br><a href="/no48-pawsandclawslavender">No 48 Paws and Claws Lavender</a>
-                                        <br><a href="/no49-pawsandclawsvanilla">No 49 Paws and Claws Vanilla-Orange</a>
-                                        </p>
+    <h2>Naturligt ren</h2>
+    <hr class="primary" />
+     <p> <a href="/no10-pitstopregular">Dr Hardmans naturliga deodorantpasta</a> är baserad på soda och aktivt kol och innehåller inga aluminiumsalter eller andra ämnen som täpper till porerna.</p>
+     <p><a href="/no80-gentle-face-wash-powder">Dr Hardmans rengöringskräm</a> med lätt peeling-effekt säljs i pulverform för att hålla länge! C-vitamininnehållet bevaras också längre i ett pulver än i en lösning.<br>Med produkten får du en <a href="/braattveta#muslinduk">muslinduk</a> som hjälper med peelingen samt är bra för att rengöra ansiktet med efteråt.</p>
+     <p>Vill du använda riktig tvål till tvätt, pröva Dr Hardmans överfettade <a href="/no81-lux-soap">milda tvål</a> tillverkad av ekologiska fina oljor, oraffinerat sheasmör samt lugnande zinkoxid.</p>
+
+                <h4>Läs också om Dr Hardmans produkter för hårvård</h4>
+                 <p><a href="/no55-shampoobar">No 55 Shampoo Bar Citrus</a>
+                 <br><a href="/no56-aloeconditioner">No 56 Aloe Vera Conditioner</a>
+                 <br><a href="/no66-redrescuemask">No 66 Red Rescue Mask</a></p>
+
+                <h4>Hand och fotvård</h4>
+                <p><a href="/no47-pawsandclawsraw">No 47 Paws and Claws Raw</a>
+                <br><a href="/no48-pawsandclawslavender">No 48 Paws and Claws Lavender</a>
+                <br><a href="/no49-pawsandclawsvanilla">No 49 Paws and Claws Vanilla-Orange</a>
+                </p>
+
+                <h4>Kroppsvård</h4>
+                <p><a href="/no22-calmingsheabodybutter">No 22 Calming Shea Body Butter</a>
+                <br><a href="/no24-cocoabodybutter">No 24 Cocoa Body Butter</a></p>
+
