--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ tag: white
                 <p>för kroppen</p></a>
     </div>
      <div class="card forty5"><a href="/face">
-                <h1>&nbsp;face, neck & lips&nbsp;</h1>
+                <h1>face, neck & lips</h1>
                 <p>för ansiktet</p></a>
     </div>
 
@@ -55,7 +55,7 @@ tag: white
     </div>
     <a name="jumptarget" id="page-buy"></a>
     <div class="text-center padding">
-        <heading><h1 class="faktarutarubrik">Du kan köpa Dr Hardman's produkter på REKO i Ekenäs, Karis och Ingå.</h1>
+        <heading><h1 class="faktarutarubrik">Du kan köpa Dr Hard&shy;man's pro&shy;dukter på REKO i Ekenäs, Karis och Ingå.</h1>
         </heading>
         <p>Gå till Facebook-gruppen (sluten) via länkarna nedan, och begär om medlemskap!
             <br>Handla i <a target="_blank" href="https://www.facebook.com/groups/597370057024580/">Ekenäs</a>,
@@ -63,7 +63,7 @@ tag: white
             <a target="_blank" href="https://www.facebook.com/groups/1470836296462753/">Ingå</a>.</p>
 
 
-        <h1>Till FÖRSÄLJNING FRE 16.3:</h1>
+        <h1>Till FÖR&shy;SÄLJ&shy;NING FRE 15.3:</h1>
         <p class="small">(Alla produkter kanske inte finns tillgängliga varje vecka.)</p>
         <p><a href="/no10-pitstopregular">DrH <strong>no.10</strong> PIT STOP naturlig deodorant</a>
             <br><a href=" /no22-calmingsheabodybutter">DrH <strong>no.22</strong> CALMING SHEA BODY BUTTER</a>
@@ -90,37 +90,37 @@ tag: white
         </p>
         <p>&nbsp;</p>
         <p>Beställ senast <span class="orange">dagen före utdelning kl 21.00</span> tack! Beställningar på FB Reko eller
-            email till <a href="mailto:lotta.hardman@gmail.com">lotta.hardman@gmail.com</a></p>
+            email till <br><a href="mailto:lotta.hardman@gmail.com">lotta.hardman&shy;@gmail.com</a></p>
         <p>För att handla på andra tider: Ring/texta Lotta Hardman 0407642085 (kvällar) eller skicka din beställning på
-            <a href="mailto:lotta.hardman@gmail.com">lotta.hardman@gmail.com</a> och kom överens om avhämtning från
+            <a href="mailto:lotta.hardman@gmail.com">lotta.hardman&shy;@gmail.com</a> och kom överens om avhämtning från
             Ekenäs eller postning (inc. avgifter och nätbetalning).</p>
     </div>
 </section>
-<section class="padding"></section>
+<section class="padding">&nbsp;</section>
 
 <section class="padding grey">
     <div class="text-center padding">
-        <h1 class="faktarutarubrik">Färskt<br>närpr&shy;oducerat och <br>100% naturligt!</h1>
+        <h1 class="faktarutarubrik">Färskt<br>när&shy;produ&shy;cerat och <br>100% natur&shy;ligt!</h1>
         <p>Genom närproduktion och användning av färska ekologiska oraffinerade råvaror som framställts rättvist och i
-            harmoni med naturen, kan Dr Hardmans hudkrämer vara av högsta kvalitet utan att innehålla konserveringsmedel
+            harmoni med naturen, kan Dr Hardmans hudkrämer vara av högsta kvalitet utan att innehålla konserverings&shy;medel
             eller andra tillsatsämnen. <br>Huden är kroppens största organ vars syfte är att avgifta kroppen och skydda
             vårt inre; muskler, blod och övriga organ mot främmande ämnen. Ge den ren mat!
 
             <img class="img-fluid cert" src="/img/badges_all.png" alt="shea-palm-coconut oil badge">
 
-        <p>I årtionden har vi, konsumenterna, fått höra att de skönhetsprodukter vi använder ska vara oljefria, -näst
+        <p>I årtionden har vi, konsumenterna, fått höra att de skönhets&shy;produkter vi använder ska vara oljefria, -näst
             intill fettfria. Vi har skalat bort hudens naturliga fetter med kraftiga tensider och syror, resultatet är
             att de flesta kvinnor nu lider av känslig hy. Vår hud har blivit så försvarslös att den inte längre kan
             motstå omgivningens påfrestningar. En ansiktsolja eller fet hudkräm kanske inte är det ultimata
-            universalmedlet för att lösa alla dina hudproblem, men Dr Hardman's produkter kommer definitivt att
-            återställa din huds barriärfunktioner, minska hudirritation och befrämja en hälsosam lyster.</p>
-        <p>Anledningen till uppsvinget av naturlig och ekologisk hudvård på senare tid är bl.a. uppmärksamhet i media om
-            hur traditionella hudvårdsprodukter och kosmetika innehåller ämnen som är direkt dåliga för kroppen. Ämnen
-            som kan vara allergiframkallande, hormonstörande och cancerframkallande.
+            universal&shy;medlet för att lösa alla dina hudproblem, men Dr Hardman's produkter kommer definitivt att
+            återställa din huds barriär&shy;funktioner, minska hud&shy;irritation och befrämja en hälsosam lyster.</p>
+        <p>Anledningen till uppsvinget av naturlig och ekologisk hudvård på senare tid är bl.a. upp&shy;märksamhet i media om
+            hur tradi&shy;tionella hudvårds&shy;produkter och kosmetika innehåller ämnen som är direkt dåliga för kroppen. Ämnen
+            som kan vara allergi&shy;framkallande, hormon&shy;störande och cancer&shy;framkallande.
             <br>En del giftiga ämnen filtreras naturligt i det yttersta hudlagret, andra går djupare ner och kommer i
-            kontakt med blodomloppet. Bra skönhetsprodukter bör alltså innehålla ingredienser som du i princip ska kunna
+            kontakt med blod&shy;omloppet. Bra skönhets&shy;produkter bör alltså innehålla ingredienser som du i princip ska kunna
             stoppa i munnen och svälja och som kroppen utan problem kan bryta ned.</p>
-        <p>De enklaste ingredienserna ger den djupaste skönheten!</p>
+        <p>De enklaste ingredi&shy;enserna ger den djupaste skönheten!</p>
         <p>Läs mer om Lotta på sidan <a href="/braattveta#drlottahardman">"bra att veta"</a> eller gå till artikeln <a target="_blank" href="https://raseborg.place2go.fi/story/dr-hardman-bytte-maskars-genetik-mot-kramkok">"Dr Hardman bytte maskar mot kräm" (publicerad på Place2Go, 18.12.2018 @ raseborg.place2go.fi ).</a></p>
 
 
