--- a/no10-pitstopregular.html
+++ b/no10-pitstopregular.html
@@ -7,11 +7,11 @@ id: page-10
 tag: blue
 ---
 <section class="dubbelpadding sloganbox" id="sloganbox10">
-    <h1 class="slogan text-center">Naturally, it won't sting!!!</h1>
+    <h1 class="slogan text-center">No aluminium, no added scent. Works for him and her alike!</h1>
 
 </section>
 <article class="padding grey">
-    <header><h1 class="">No 10 PIT STOP REGULAR DEODORANT</h1></header>
+    <header><h1>No 10 PIT STOP REGULAR DEODORANT</h1></header>
     <p>En soda-baserad doftfri aluminiumfri naturlig deodorantpasta<br>Burk med skruvlock, 50 ml.</p>
     <figure class="produktkort-singel">
         <div class="flip-card">
@@ -43,7 +43,7 @@ tag: blue
     <h3>INGREDIENSER</h3>
     <p class="ingredienser">
         växtbaserat glycerin° majsstärkelse° potatisstärkelse° sheasmör°*<sup>◆</sup>
-        natriumbikarbonat(soda), kaolin, zinkoxid, bivax° aktivt kol
+        natriumbikarbonat (soda), kaolin, zinkoxid, bivax° aktivt kol
     </p>
 
     <p class="small">° Ekologisk
