--- a/no23-citrusbodybutter.html
+++ b/no23-citrusbodybutter.html
@@ -21,7 +21,7 @@ tag: white
                     <img class="img-fluid mx-auto produktprofilbild" src="/img/DrHardmans_No23_Citrus_Body_Butter_open.png" alt="Dr Hardmans No23 Citrus Body Butter">
                 </div>
                 <div class="flip-card-back">
-                    <img class="img-fluid mx-auto produktprofilbild" src="/img/DrHardmans_No23_Citrus_Body_Butter_open.png" alt="Dr Hardmans No23 Citrus Body Butter">
+                    <img class="img-fluid mx-auto produktprofilbild" src="/img/Burk_citrus500.png" alt="Dr Hardmans No23 Citrus Body Butter">
                 </div>
             </div>
         </div>
