--- a/no25-mangobodybutter.html
+++ b/no25-mangobodybutter.html
@@ -21,7 +21,7 @@ tag: white
                     <img class="img-fluid mx-auto produktprofilbild" src="/img/DrHardmans_No25_Mango_Body_Butter.png" alt="Dr Hardman's No.25 Mango Body Butter">
                 </div>
                 <div class="flip-card-back">
-                    <img class="img-fluid mx-auto produktprofilbild" src="/img/DrHardmans_No25_Mango_Body_Butter.png" alt="Dr Hardman's No.25 Mango Body Butter">
+                    <img class="img-fluid mx-auto produktprofilbild" src="/img/Burk_mango500.png" alt="Dr Hardman's No.25 Mango Body Butter">
                 </div>
             </div>
         </div>
