--- a/no70-lipbalm.html
+++ b/no70-lipbalm.html
@@ -21,7 +21,7 @@ tag: white
                     <img class="img-fluid" src="/img/DrHardmans_No70_Vanilla_Choko_Lip_Balm.png" alt="Dr Hardman No 70 Vanilla-Choko Lip Balm"/>
                 </div>
                 <div class="flip-card-back">
-                    <img class="img-fluid" src="/img/DrHardmans_No70_Vanilla_Choko_Lip_Balm.png" alt="Dr Hardman No 70 Vanilla-Choko Lip Balm"/>
+                    <img class="img-fluid" src="/img/flipcard-lipbalm.jpg" alt="Dr Hardman No 70 Vanilla-Choko Lip Balm"/>
                 </div>
             </div>
         </div>
