--- a/no71-lipbalmvitamin.html
+++ b/no71-lipbalmvitamin.html
@@ -70,5 +70,5 @@ tag: white
                     <p><a href="/no70-lipbalm">No 70 Vanilla-Choko Lip Balm</a>
                     <br><a href="/no47-pawsandclawsraw">No 47 Paws and Claws hand- och fotkräm utan dofttillsatser</a>
                     <br><a href="/no48-pawsandclawslavender">No 48 Paws and Claws hand och fotkräm med doft av lavendel och ylang ylang</a>
-                    <br><a href="/no49-pawsandclawsvanilla">No 48 Paws and Claws vanilj- och apelsindoftande hand- och fotkräm</a>
+                    <br><a href="/pawsandclawsvanilla">No 48 Paws and Claws vanilj- och apelsindoftande hand- och fotkräm</a>
                 </p>
