--- a/no81-lux-soap.html
+++ b/no81-lux-soap.html
@@ -7,33 +7,37 @@ id: page-81
 tag: white
 ---
 
-<section class="padding">
-    <div class="container">
-        <div class="row align-items-center">
-            <div class="col-lg-4 offset-lg-1">
-                <img class="img-fluid mx-auto produktprofilbild" src="/img/DrHardmans_No81_lux_soap.png">
-            </div>
-            <div class="col-lg-6">
-                <h1 class="pt-3">No 81 Lux Soap</h1>
-                <h3>En mild vacker ansiktstvål med doft av eukalyptus i presentförpackning.<br>75g</h3>
+
+
+             <section class="dubbelpadding sloganbox" id="sloganbox10">
+                          <h1 class="slogan text-center">Soap and water wash away
+                                                         <br>grime and dirt and grease and clay.
+                                                         <br>Water flowing on my skin
+                                                         <br>clean outside and clean within. </h1>
+                      </section>
+
+                      <article class="padding grey">
+                          <header><h1>No 81 Lux Soap</h1></header>
+                <p>En mild vacker ansiktstvål med doft av eukalyptus i presentförpackning.<br>75g</p>
+                <figure class="produktkort-singel">
+                     <div class="flip-card">
+                          <div class="flip-card-inner">
+                               <div class="flip-card-front">
+                                      <img class="img-fluid" src="/img/DrHardmans_No81_lux_soap2.png" alt="Dr Hardmans No 81 ansiktstvål">
+                                </div>
+                                <div class="flip-card-back">
+                                       <img class="img-fluid" src="/img/DrHardmans_No81_lux_soap.png" alt="Dr Hardmans No 81 ansiktstvål">
+                                </div>
+                           </div>
+                      </div>
+                 </figure>
+
+
                 <h1 class="pris">10,00 € *</h1>
-                <p class="small">* Rekopris. I Sverige 100 kr. Produkten finns till salu från mitten av april 2018 framåt.</p>
-            </div>
-        </div>
-    </div>
-</section>
 
-<section class="light-bg">
-    <div class="texture-border-top">
-    </div>
-    <div class="container pt-5 pb-4">
-        <div class="row">
-
-            <div class="col-lg-4 offset-lg-1 pb-3">
-                <div class="faktaruta">
                     <h1 class="faktarutarubrik">Snabb&shy;fakta</h1>
 
-                    <h4>BRA FÖR:</h4>
+                    <h3>BRA FÖR</h3>
                     <ul class="ingredienslista">
                         <li>Torr hy</li>
                         <li>Känslig hy</li>
@@ -41,45 +45,28 @@ tag: white
                         <li>Lugnar irriterad hy</li>
                         <li>VEGAN</li>
                     </ul>
-                    <h4>INGREDIENSER:</h4>
+                    <h3>INGREDIENSER</h3>
                     <p>
-                        <a href="/ingredienser">saponifierad olivolja°*<sup>◆</sup></a>
-                        <a href="/ingredienser">saponifierad kokosolja°*<sup>◆</sup></a>
-                        <a href="/ingredienser">saponifierad melonkärneolja</a>
-                        <a href="/ingredienser">saponifierat sheasmör°*<sup>◆</sup></a>
-                        <a href="/ingredienser">saponifierad ricinolja°</a>
-                        <a href="/ingredienser">saponifierad jojobaolja°</a>
-                        <a href="/ingredienser">zinkoxid</a>
-                        <a href="/ingredienser">eteriska oljor av eukalyptus och pepparmynta</a>
+                     saponifierad olivolja°*<sup>◆</sup>
+                      saponifierad kokosolja°*<sup>◆</sup>
+                      saponifierad melonkärneolja,
+                      saponifierat sheasmör°*<sup>◆</sup>
+                      saponifierad ricinolja°
+                     zinkoxid,
+                      eteriska oljor av eukalyptus och pepparmynta
                     </p>
 
-                    <p>° Ekologisk
+                    <p class="small">° Ekologisk
                         <br>* Rättvis handel
                         <br><sup>◆</sup> Oraffinerad (raw) råvara
                     </p>
 
-                </div>
-            </div>
-
-            <div class="col-lg-6">
-                <h1>Om denhär produkten:</h1>
+                <h2 class="om">Om denhär produkten</h2>
                 <hr class="primary" />
                 <p>Dr Hardmans milda ansiktsvål kan förståss användas också för händer och hela kroppen. Tvålen är överfettad och inte uttorkande med en mild doft av eukalyptus och pepparmynta.
                 <br>Den vackra kartongen är i sig själv en presentförpackning. Gläd din vän eller dig själv med en liten välgörande present!
                 </p>
-                <p><strong>Dr Hardmans motsvarande produkter:</strong>
-                    <br><a href="/no80-gentle-face-wash-powder">No 80 Gentle Face Wash Powder</a>
-                    <br><a href="/shampoobar">No 55 Shampoo Bar</a>
+                <h4>Dr Hardmans motsvarande produkter</h4>
+                    <p><a href="/no80-gentle-face-wash-powder">No 80 Gentle Face Wash Powder</a>
+                    <br><a href="/no55-shampoobar">No 55 Shampoo Bar</a>
                 </p>
-                <div
-                        class="fb-like"
-                        data-share="true"
-                        data-width="450"
-                        data-show-faces="true">
-                </div>
-                <a class="up pull-right" href="#page-top"><i class="fa fa-angle-double-up" aria-hidden="true"></i> Upp</a>
-            </div>
-        </div>
-    </div>
-    <div class="texture-border-bottom"></div>
-</section>
