--- a/no67-cleansing-and-hydrating-face-mask.html
+++ b/no67-cleansing-and-hydrating-face-mask.html
@@ -66,14 +66,16 @@ tag: white
                 <h2 class="om">Om denhär produkten</h2>
                 <hr class="primary" />
                 <p>Dr Hardmans renande och fuktande ansiktsmask med lätt peeling-effekt säljs i pulverform för att hålla länge! C-vitamininnehållet bevaras också längre i ett pulver än i en lösning.</p>
-                <p><strong>Användning:</strong> Blanda ca två teskedar pulver åt gången med lika mängd havremjölk, naturell yoghurt eller <a href="/no93-hydrating-face-mist">DrHardmans ansiktsvatten No 93</a> till en mjuk lera och gnid den på huden med runda rörelser. För extra effekt kan man också ringla i lite honung. Du kan lätt själv bestämma koncistensen genom att lägga till mer eller mindre vätska. Låt verka tills masken stelnat helt (minst 20-30min). Blöt en muslinduk/tunn trasa i ljummet vatten och lägg den över masken för att blöta upp den. Torka sedan av masken med det blötta och ursköljda tygstycket. Använd masken 1-2 gånger i veckan på väl rengjord hud.</p>
+                <figure><img class="img-fluid profilbild spacing-unit" src="/img/flipcard-masks.jpg"></figure>
+
+                <h4>Användning</h4>
+                <p>Blanda ca två teskedar pulver åt gången med lika mängd havremjölk, naturell yoghurt eller <a href="/no93-hydrating-face-mist">DrHardmans ansiktsvatten No 93</a> till en mjuk lera och gnid den på huden med runda rörelser. För extra effekt kan man också ringla i lite honung. Du kan lätt själv bestämma koncistensen genom att lägga till mer eller mindre vätska. Låt verka tills masken stelnat helt (minst 20-30min). Blöt en muslinduk/tunn trasa i ljummet vatten och lägg den över masken för att blöta upp den. Torka sedan av masken med det blötta och ursköljda tygstycket. Använd masken 1-2 gånger i veckan på väl rengjord hud.</p>
                 <p>Kaolin och havre renar huden och tillför en lätt peeling-effekt. Havre och videbark lugnar inflammationer och motverkar torr hy samt exem och akne tack vare sina antiseptiska egenskaper. Havre tillför också huden B-vitamin och mineraler. Bärpulvren är goda antioxidanter och tillför vitamin C som som stimulerar ytlig blodcirkulation och kollagenproduktion, gör huden ljusare och jämnare, förminskar porerna och minskar mängden pormaskar. För ett extra bra resultat, använd <a href="/no80-gentle-face-wash-powder">Dr Hardmans No. 80 Gentle Face Scrub</a> peeling före masken.</p>
                 <p>Pulvret är ljusrött, doftar milt och gott och håller ca 6 månader. Förvara svalt och mörkt.</p>
                 <p>Använd gärna ett <a href="/no90-refreshing-face-mist">DrHardmans ansiktsvatten</a> efter ansiktsmasken påföljt av ett <a href="/no32-serendipity">ansiktsserum</a> och/eller <a href="/no44-agedefence">ansiktskräm</a>.</p>
                 <h4>Dr Hardmans liknande produkter</h4>
-                    <p><a href="/no80-gentle-face-wash-powder">No 80 Gentle Face Scrub Powder för normal till fet hy</a>
-                    <br><a href="/no68-tight-and-bright-face-mask">No 68 Tight and Bright Face Mask Powder för alla hudtyper</a>
-                    <br><a href="/no90-refreshing-face-mist">No 90 Refreshing Face Mist för alla hudtyper</a>
-                    <br><a href="/no91-calming-face-mist">No 91 Calming Face Mist för torr eller känslig hy</a>
+                    <p><a href="/no80-gentle-face-wash-powder">No 80 Gentle Face Wash Powder för normal till fet hy</a>
+                   <!--<br><a href="/no90-refreshing-face-mist">No 90 Refreshing Face Mist för alla hudtyper</a>
+                    <br><a href="/no91-calming-face-mist">No 91 Calming Face Mist för torr eller känslig hy</a>-->
                     <br><a href="/no93-hydrating-face-mist">No 93 Hydrating Face Mist för normal, torr eller åldrande hy</a>
                 </p>
