save before fixing too much on flip cards and iPad bg

--- a/404.html
+++ b/404.html
@@ -16,7 +16,7 @@ id: page-error
 
 <h4>Kanske någon av dessa länkar hjälper dig hitta rätt</h4>
 <p><a href="/no10-pitstopregular">DrH <strong>no.10</strong> PIT STOP naturlig deodorant</a>
-            <br><a href=" /no22-calmingsheabodybutter">DrH <strong>no.22</strong> CALMING SHEA BODY BUTTER</a>
+            <br><a href=" /no22-sheabodybutter">DrH <strong>no.22</strong> CALMING SHEA BODY BUTTER</a>
             <br><a href="/no23-citrusbodybutter">DrH <strong>no.23</strong> CITRUS BODY BUTTER</a>
             <br><a href="/no24-cocoabodybutter">DrH <strong>no.24</strong> COCOA BODY BUTTER</a>
             <br><a href="/no25-mangobodybutter">DrH <strong>no.25</strong> MANGO BODY BUTTER</a>
