--- a/no23-citrusbodybutter.html
+++ b/no23-citrusbodybutter.html
@@ -61,7 +61,7 @@ tag: white
     <p>Ett ljuvligt citrusdoftande body butter för dagligt bruk. Sheasmöret är känt för sina närande och skyddande egenskaper. Det är naturligt och ekologiskt och har använts av afrikanska kvinnor i århundraden. Sheasmöret i Dr Hardmans produkter är oraffinerat och ekologiskt producerat av ett kooperativ i Ghana. Det är uppköpt fair trade från kooperativet utan mellanhänder.</p>
     <p>&nbsp;</p>
     <h4>DR HARDMANS LIKNANDE PRODUKTER</h4>
-    <p><a href="/no22-calmingsheabodybutter">No 22 Calming Shea Body Butter</a>
+    <p><a href="/no22-sheabodybutter">No 22 Calming Shea Body Butter</a>
         <br><a href="/no24-cocoabodybutter">No 24 Cocoa Body Butter</a>
         <br><a href="/no25-mangobodybutter">No 25 Mango Body Butter</a>
         <br><a href="/no26-rosebodybutter">No 26 Rose Body Butter</a>
