--- a/no25-mangobodybutter.html
+++ b/no25-mangobodybutter.html
@@ -68,7 +68,7 @@ tag: white
     <br>Dr Hardman's Mango Body Butter är den mest (väl)doftande dagliga fuktgivaren i vårt sortiment som alla älskar och ingen kan sluta använda då de en gång börjat! <br>De som gillar goda dofter men hellre doftar blomma än frukt skall pröva <a href="/rosebodybutter">No. 26 Rose Body Butter</a>.</p>
     <p>&nbsp;</p>
     <h4>DR HARDMANS LIKNANDE PRODUKTER</h4>
-    <p><a href="/no22-calmingsheabodybutter">No 22 Calming Shea Body Butter</a>
+    <p><a href="/no22-sheabodybutter">No 22 Calming Shea Body Butter</a>
         <br><a href="/no23-citrusbodybutter">No 23 Citrus Body Butter</a>
         <br><a href="/no24-cocoabodybutter">No 24 Cocoa Body Butter</a>
         <br><a href="/no26-rosebodybutter">No 26 Rose Body Butter</a>
