--- a/no67-cleansing-and-hydrating-face-mask.html
+++ b/no67-cleansing-and-hydrating-face-mask.html
@@ -8,11 +8,11 @@ tag: white
 ---
 
            <section class="dubbelpadding sloganbox" id="sloganbox10">
-               <h1 class="slogan text-center">Smooth and sooth :)</h1>
+               <h1 class="slogan text-center">A clay mask that will step up your clean routine</h1>
            </section>
 
            <article class="padding grey">
-               <header><h1>No 67 Cleansing and hydrating face mask powder</h1></header>
+               <header><h1>No 67 Cleansing and hydrating clay mask powder</h1></header>
                 <p>En lyxig fuktande och renande lermask för alla hudtyper.<br>Burk med skruvlock, 100ml.</p>
                 <figure class="produktkort-singel">
                         <div class="flip-card">
