--- a/alla-produkter.html
+++ b/alla-produkter.html
@@ -31,7 +31,7 @@ tag: white
                 <p>Calming Shea<br>Body Butter</p>
             </div>
             <div class="flip-card-back">
-                <a href=" /no22-calmingsheabodybutter">
+                <a href=" /no22-sheabodybutter">
                     <img class="img-fluid" src="/img/DrHardmans_No22_Calming_Shea_Butter.png"
                          alt="Dr Hardman No.22 Calming Shea Body Butter"/>
                 </a>
