--- a/body.html
+++ b/body.html
@@ -16,7 +16,7 @@ tag: white
                 <p>Calming Shea<br>Body Butter</p>
             </div>
             <div class="flip-card-back">
-                <a href=" /no22-calmingsheabodybutter">
+                <a href=" /no22-sheabodybutter">
                     <img class="img-fluid" src="/img/DrHardmans_No22_Calming_Shea_Butter.png"
                          alt="Dr Hardman No.22 Calming Shea Body Butter"/>
                 </a>
@@ -94,7 +94,7 @@ tag: white
                     <br>Om du inte använder ditt body butter varje dag, är det bra att förvara det i kylskåp. Kom i så fall ihåg att ta ut produkten för uppvärmning till rumstemperatur i god tid före användning.</p>
                 <p>Ett body butter som kommit åt att smälta i ett för varmt badrum/ varm bil, har inte gått förlorat! Du kan fortsätta att använda den så länge produktens doft är oförändrad och perioden av överhettning kort. Luktar produkten illa, bör den slängas!</p>
                 <h4>DR HARDMANS BODY BUTTERS</h4>
-                    <p><a href="/no22-calmingsheabodybutter">No 22 Calming Shea Butter</a>
+                    <p><a href="/no22-sheabodybutter">No 22 Calming Shea Butter</a>
                         <br><a href="/no23-citrusbodybutter">No 23 Citrus Body Butter</a>
                         <br><a href="/no24-cocoabodybutter">No 24 Cocoa Body Butter</a>
                         <br><a href="/no25-mangobodybutter">No 25 Mango Body Butter</a>
