--- a/braattveta.html
+++ b/braattveta.html
@@ -35,7 +35,7 @@ id: braattveta
                     <br>Om du inte använder ditt body butter varje dag, är det bra att förvara det i kylskåp. Kom i så fall ihåg att ta ut produkten för uppvärmning till rumstemperatur i god tid före användning.</p>
                 <p>Ett body butter som kommit åt att smälta i ett för varmt badrum/ varm bil, har inte gått förlorat! Du kan fortsätta att använda den så länge produktens doft är oförändrad och perioden av överhettning kort. Luktar produkten illa, bör den slängas!</p>
                 <h4>DR HARDMANS BODY BUTTERS</h4>
-                    <p><a href="/no22-calmingsheabodybutter">No 22 Calming Shea Butter</a>
+                    <p><a href="/no22-sheabodybutter">No 22 Calming Shea Butter</a>
                         <br><a href="/no23-citrusbodybutter">No 23 Citrus Body Butter</a>
                         <br><a href="/no24-cocoabodybutter">No 24 Cocoa Body Butter</a>
                         <br><a href="/no25-mangobodybutter">No 25 Mango Body Butter</a>
@@ -160,7 +160,7 @@ id: braattveta
                 <h4>Nedan listat Dr Hardmans produkter där också alla mikroingredsienser är fria från konserveringsmedel</h4>
                 <ul class="nobullets">
                     <li> <a href="/no10-pitstopre ular">No 10 Pit Stop Regular Deodorant</a> </li>
-                     <li><a href="/no22-calmingsheabodybutter">No 22 Shea Body Butter</a> </li>
+                     <li><a href="/no22-sheabodybutter">No 22 Shea Body Butter</a> </li>
                      <li><a href="/no23-cocoabodybutter">No 24 Cocoa Body Butter</a> </li>
                      <li><a href="/no26-rosebodybutter"> No 26 Rose Body Butter</a> </li>
                      <li><a href="/no32-serendipity">No 32 Serendipity Face Oil</a> </li>
