--- a/hygiene.html
+++ b/hygiene.html
@@ -70,6 +70,6 @@ tag: white
                 </p>
 
                 <h4>Kroppsvård</h4>
-                <p><a href="/no22-calmingsheabodybutter">No 22 Calming Shea Body Butter</a>
+                <p><a href="/no22-sheabodybutter">No 22 Calming Shea Body Butter</a>
                 <br><a href="/no24-cocoabodybutter">No 24 Cocoa Body Butter</a></p>
 
