vertical images mobile, fixed mobile fb-padding, mobile atmedia for bgs to basics

--- a/body.html
+++ b/body.html
@@ -6,7 +6,7 @@ id: body
 tag: white
 ---
 <section class="dubbelpadding sloganbox" id="sloganbox10">
-    <h1 class="slogan text-center">Hop in! -Body butters work best on wet skin</h1>
+    <h1 class="slogan text-center">Body butters work best on wet skin</h1>
 </section>
 <section class="produktkort">
     <div class="flip-card">
