fixed flip cards in iOS -at least on body-page..

--- a/body.html
+++ b/body.html
@@ -5,11 +5,12 @@ title: Bodybutters
 id: body
 tag: white
 ---
+<div class="ios-bg">
 <section class="dubbelpadding sloganbox" id="sloganbox10">
     <h1 class="slogan text-center">Body butters work best on wet skin</h1>
 </section>
 <section class="produktkort">
-    <div class="flip-card">
+    <div class="flip-card" ontouchstart="this.classList.toggle('hover')" ontouchend="this.classList.toggle('hover')">
         <div class="flip-card-inner">
             <div class="flip-card-front twenty2">
                 <h1>No 22</h1>
@@ -24,7 +25,7 @@ tag: white
             </div>
         </div>
     </div>
-    <div class="flip-card">
+    <div class="flip-card" ontouchstart="this.classList.toggle('hover')" ontouchend="this.classList.toggle('hover')">
         <div class="flip-card-inner">
             <div class="flip-card-front twenty3">
                 <h1>No 23</h1>
@@ -37,7 +38,7 @@ tag: white
             </div>
         </div>
     </div>
-    <div class="flip-card">
+    <div class="flip-card" ontouchstart="this.classList.toggle('hover')" ontouchend="this.classList.toggle('hover')">
         <div class="flip-card-inner">
             <div class="flip-card-front twenty4">
                 <h1>No 24</h1>
@@ -51,7 +52,7 @@ tag: white
             </div>
         </div>
     </div>
-    <div class="flip-card">
+    <div class="flip-card" ontouchstart="this.classList.toggle('hover')" ontouchend="this.classList.toggle('hover')">
         <div class="flip-card-inner">
             <div class="flip-card-front twenty5">
                 <h1>No 25</h1>
@@ -65,7 +66,7 @@ tag: white
             </div>
         </div>
     </div>
-    <div class="flip-card">
+    <div class="flip-card" ontouchstart="this.classList.toggle('hover')" ontouchend="this.classList.toggle('hover')">
         <div class="flip-card-inner">
             <div class="flip-card-front twenty6">
                 <h1>No 26</h1>
@@ -80,6 +81,7 @@ tag: white
         </div>
     </div>
 </section>
+</div>
 <article class="grey padding">
   <a name="jumptarget" id="bodybutters"></a>
                 <h1>OM BODY BUTTERS</h1>
